# kagura

./: Cargo.toml  README.md  kagura.desktop
src/: main.rs
ui/: appwindow.slint
